Added a list of completed projects to student_info.html

--- a/templates/student_confirmed.html
+++ b/templates/student_confirmed.html
@@ -10,5 +10,7 @@
 
 <p>Name: {{ first }} {{ last }}</p>
 <p>GitHub Account: {{ github }}</p>
+
+<p><a href="/student?github={{ github }}">Click here to see {{ first }}'s profile.</a>
 </body>
 </html>
