--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -7,5 +7,12 @@
 <h1>{{ first }} {{ last }}</h1>
 
 <p>GitHub Account: {{ github }}</p>
+
+<p>Projects completed by {{ first }}:
+    <ul>
+    {% for tuple in list_of_tuples %}
+        <li>{{ tuple[0] }}: {{ tuple[1] }}</li>
+    {% endfor %}
+    </ul>
 </body>
 </html>
