--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -11,7 +11,7 @@
 <p>Projects completed by {{ first }}:
     <ul>
     {% for tuple in rows %}
-        <li>{{ tuple[0] }}: {{ tuple[1] }}</li>
+        <li><a href="/project?title={{ tuple[0] }}">{{ tuple[0] }}</a>: {{ tuple[1] }}</li>
     {% endfor %}
     </ul>
 </body>
